# AutomatedPipette

./: .clang-format  .gitignore  CLAUDE.md  LearnedPatterns.md  README.md  ToDo.md  pyproject.toml
claude_test/: README.md  capture_prompt.py  capture_screenshot.py  diagnose_ble.py  forward_pipetting_auto.py  forward_pipetting_dryrun.py  forward_pipetting_liquid.py  forward_pipetting_usb.py  forward_pipetting_v2.py  forward_pipetting_v3.py  forward_pipetting_v4.py  inspect_accept.py  multi_dispensing.py  pair_with_passkey.py  query_info.py  reverse_pipetting.py  scan_ble.py  setup_docker_ble.sh  test_get_version.py  test_pair_then_send.py  test_write_response.py  usb_get_version.py
docs/: Picus2_BLE_Python_Connection_Guide.docx  Picus2_USB_Connection_Test_PowerShell.txt  README.md
examples/: example_forward.py  example_usb.py
src/picus2/: __init__.py  client.py  constants.py  errors.py  pipetting.py  protocol.py  transport.py
tests/: test_client.py  test_pipetting.py  test_protocol.py
