[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picus2"
version = "0.1.0"
description = "Async BLE control library for the Sartorius Picus 2 pipette"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["bleak>=0.22"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
