[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picus2"
version = "0.2.0"
description = "Async control library for the Sartorius Picus 2 pipette (BLE/USB)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["bleak>=0.22", "pyserial>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
