[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picus2"
version = "0.2.0"
description = "Async control library for the Sartorius Picus 2 pipette (BLE/USB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["bleak>=0.22", "pyserial>=3.5"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-pyserial>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src", "tests", "claude_test"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.12"
files = ["src/picus2"]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
